# LowFilter

./: CMakeLists.txt  LICENSE  LowFreqVST.gitignore  README.md
.github/workflows/: build-vst3-windows.yml
Source/: FilmstripRotarySlider.cpp  FilmstripRotarySlider.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
